<resources>
    <string name="app_name">Music App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artist_name">Artist Name</string>
    <string name="collection_name">Collection Name</string>
    <string name="artwork_url_60">Artwork URL 60</string>
    <string name="track_price">Track Price</string>
    <string name="preview_song">Preview Song</string>
</resources>